--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Alpha1
	- Fixed false positive error and PHP5 related error on archive
		creation
	- Added <image> tag for album art and ability to filter rss feed
		by user by adding ?username=<username> to rss link.  
	- Added LDAP/Active Directory  auth support (Thx Rubin & pb1dft)
	- Added ajax support to ratings, no longer requires a refresh, 
		hello instant gratification. 
	- Tweaked Kajax, now accepts an array of elements to replace
		from a passed xml document. allows for multiple targets
		on a single ajax request 
	- Fixed display of disabled localplay methods, Preferences will
		now only display active ones. 
	- Fixed MPD Controller to attempt to find files based on filename
		if they were added outside of ampache
	- Tweaked Now Playing to prevent wrapping of Album Art.
	- Tweaked stylesheet to fix problem with Firefox and the :active
		style on the sidebar with the select drop downs
	- Added Options to Mail statistics to users when sending them
		a message (Thx pb1dft)

--------------------------------------------------------------------------
  v.3.3.2 10/01/2006
	- Updated SQL file, changed default site title
	- Fixed Duplicate Songs functions that have been broken for a 
		while
	- Fixed some Install issues with incorrectly named templates
	- Added check for MySQL support to first install page, redirects
		to /test.php if mysql support is non-existant
	- Added ability to turn Random/Repeat on and off in localplay
		and also improved localplay page a tiny bit.
	- Fixed a problem with pagination on the admin/users.php page
	- Added ability to turn on User/IP/Date Login history tracking 
		viewable only by Administrators